<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/scrollView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:scrollbarAlwaysDrawVerticalTrack="false"
            android:verticalScrollbarPosition="defaultPosition">

            <TextView
                android:id="@+id/emergency_contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginTop="35dp"
                android:text="@string/emergency_contact" />

            <EditText
                android:id="@+id/emergency_contact_firstname"
                android:layout_width="317dp"
                android:layout_height="42dp"
                android:layout_marginStart="35dp"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:hint="@string/first_name"
                android:inputType="textPersonName"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/emergency_contact_lastname"
                android:layout_width="317dp"
                android:layout_height="42dp"
                android:layout_marginStart="35dp"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/last_name"
                android:inputType="textPersonName"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/emergency_contact_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginTop="48dp"
                android:text="@string/emergency_contact_email" />

            <EditText
                android:id="@+id/emergency_contact_email_address"
                android:layout_width="317dp"
                android:layout_height="42dp"
                android:layout_marginStart="35dp"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:hint="@string/example_domain_com"
                android:inputType="textWebEmailAddress|textPersonName"
                android:textSize="14sp" />

            <RadioGroup
                android:id="@+id/message_select"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginTop="35dp"
                android:orientation="horizontal">


                <RadioButton
                    android:id="@+id/default_message_radio_select"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/default_message"
                    tools:ignore="OnClick" />


                <RadioButton
                    android:id="@+id/custom_message_radio_select"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="37dp"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/custom_message" />

            </RadioGroup>

            <EditText
                android:id="@+id/custom_message_text"
                android:layout_width="317dp"
                android:layout_height="288dp"
                android:layout_marginStart="35dp"
                android:layout_marginTop="35dp"
                android:ems="10"
                android:gravity="top"
                android:hint="Enter Message Here"
                android:inputType="textLongMessage|textMultiLine"
                android:scrollIndicators="right"
                android:scrollbarAlwaysDrawVerticalTrack="false"
                android:scrollbars="vertical"
                android:visibility="gone" />

            <Button
                android:id="@+id/add_contact"
                android:layout_width="317dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginTop="70dp"
                android:layout_marginBottom="70dp"
                android:onClick="onClick"
                android:text="@string/add_contact" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>