<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#673AB7"
    tools:context=".MainActivity">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="317dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">>

        <RadioButton
            android:id="@+id/add_contact_radio"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:checked="true"
            android:onClick="onAddEditRadioGroupClicked"
            android:text="Add Contacts"
            android:textColor="#FFFFFF" />

        <RadioButton
            android:id="@+id/edit_contact_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onAddEditRadioGroupClicked"
            android:text="Edit Contacts"
            android:textAlignment="viewStart"
            android:textColor="#FFFFFF" />
    </RadioGroup>

    <ScrollView
        android:id="@+id/add_contact_scroll_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="75dp"
        android:background="#FFFFFF"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:id="@+id/scrollView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:scrollbarAlwaysDrawVerticalTrack="false"
            android:verticalScrollbarPosition="defaultPosition">

            <TextView
                android:id="@+id/emergency_contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginTop="10dp"
                android:text="@string/emergency_contact" />

            <EditText
                android:id="@+id/emergency_contact_firstname"
                android:layout_width="317dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:hint="@string/first_name"
                android:inputType="textPersonName"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/emergency_contact_lastname"
                android:layout_width="317dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/last_name"
                android:inputType="textPersonName"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/emergency_contact_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginTop="48dp"
                android:text="@string/emergency_contact_email" />

            <EditText
                android:id="@+id/emergency_contact_email_address"
                android:layout_width="317dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:hint="@string/example_domain_com"
                android:inputType="textWebEmailAddress|textPersonName"
                android:textSize="14sp" />

            <RadioGroup
                android:id="@+id/message_select"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginTop="35dp"
                android:orientation="horizontal">


                <RadioButton
                    android:id="@+id/default_message_radio_select"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:onClick="onMessageRadioGroupClicked"
                    android:text="@string/default_message"
                    tools:ignore="OnClick" />


                <RadioButton
                    android:id="@+id/custom_message_radio_select"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="37dp"
                    android:onClick="onMessageRadioGroupClicked"
                    android:text="@string/custom_message" />

            </RadioGroup>

            <EditText
                android:id="@+id/custom_message_text"
                android:layout_width="317dp"
                android:layout_height="288dp"
                android:layout_marginStart="35dp"
                android:layout_marginTop="35dp"
                android:ems="10"
                android:gravity="top"
                android:inputType="textLongMessage|textMultiLine"
                android:scrollIndicators="right"
                android:scrollbarAlwaysDrawVerticalTrack="false"
                android:scrollbars="vertical"
                android:textSize="14sp"
                android:visibility="gone" />

            <Button
                android:id="@+id/add_contact"
                android:layout_width="317dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginTop="70dp"
                android:layout_marginBottom="70dp"
                android:onClick="addContact"
                android:text="@string/add_contact" />

            <Button
                android:id="@+id/testButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="loadData"
                android:text="Button" />

        </LinearLayout>
    </ScrollView>

    <ScrollView
        android:id="@+id/edit_contacts_scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="75dp"
        android:background="#FFFFFF"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/contact_select"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginTop="10dp"
                android:text="Select Contact" />

            <Spinner
                android:id="@+id/contact_list_spinner"
                android:layout_width="317dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginTop="15dp" />

            <TextView
                android:id="@+id/edit_contact_contact_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginTop="35dp"
                android:text="@string/emergency_contact" />

            <EditText
                android:id="@+id/edit_contact_first_name"
                android:layout_width="317dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:hint="First Name"
                android:inputType="textPersonName"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/edit_contact_last_name"
                android:layout_width="317dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="Last Name"
                android:inputType="textPersonName"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/edit_contact_emergency_email_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginTop="48dp"
                android:text="@string/emergency_contact_email" />

            <EditText
                android:id="@+id/edit_contact_email_address"
                android:layout_width="317dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:hint="@string/example_domain_com"
                android:inputType="textEmailAddress"
                android:textSize="14sp" />

            <RadioGroup
                android:id="@+id/edit_contact_message_radio_group"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="35dp"
                android:layout_marginTop="35dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/edit_contact_default_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:onClick="onEditContactMessageRadioGroupClicked"
                    android:text="@string/default_message" />

                <RadioButton
                    android:id="@+id/edit_contact_custom_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="37dp"
                    android:onClick="onEditContactMessageRadioGroupClicked"
                    android:text="@string/custom_message" />
            </RadioGroup>

            <EditText
                android:id="@+id/edit_contact_custom_message_box"
                android:layout_width="317dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginTop="35dp"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:textSize="14sp"
                android:visibility="gone" />

            <Button
                android:id="@+id/delete_contact_button"
                android:layout_width="317dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginTop="35dp"
                android:backgroundTint="#EF9E9E"
                android:onClick="deleteContact"
                android:text="Delete Contact" />

            <Button
                android:id="@+id/update_contact_information_button"
                android:layout_width="317dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="70dp"
                android:onClick="buttonEditContact"
                android:text="@string/update_information" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>